# MatrixGame

./: .editorconfig  CMakeLists.txt  CMakeSettings.json  README.md
MatrixGame/: CMakeLists.txt
MatrixGame/src/: DevConsole.cpp  MatrixCamera.hpp  MatrixCursor.hpp  MatrixFlyer.cpp  MatrixFormGame.cpp  MatrixFormGame.hpp  MatrixGame.cpp  MatrixGame.h  MatrixGameDll.cpp  MatrixGameDll.hpp  MatrixGameDllEx.cpp  MatrixGameDllEx.hpp  MatrixKeyScan.hpp  MatrixLogic.cpp  MatrixLogic.hpp  MatrixMap.cpp  MatrixMap.hpp  MatrixMapGroup.cpp  MatrixMapGroup.hpp  MatrixMapPrepare.cpp  MatrixMapStatic.cpp  MatrixMapStatic.hpp  MatrixMapTrace.cpp  MatrixMapUtils.h  MatrixMinimap.cpp  MatrixObjectBuilding.cpp  MatrixObjectRobot.cpp  MatrixRenderPipeline.cpp  MatrixRobot.cpp  MatrixRobot.hpp  MatrixShadowManager.cpp  MatrixSide.cpp  MatrixSide.hpp  MatrixTerSurface.cpp  MatrixWater.cpp
MatrixGame/src/Control/: CLocalOrderProcessor.cpp  CLocalOrderProcessor.h  COrderController.cpp  COrderController.h  IOrderProcessor.h
MatrixGame/src/Effects/: MatrixEffect.cpp  MatrixEffectExplosion.cpp  MatrixEffectMovingObject.cpp
MatrixGame/src/Interface/: CConstructor.cpp  CConstructor.h  CInterface.cpp
MatrixGame/src/Logic/: MatrixAIGroup.cpp  MatrixAIGroup.h  MatrixLogicSlot.cpp  MatrixLogicSlot.h  MatrixRule.cpp  MatrixRule.h
MatrixGame/src/NetGame/: NetConnection.h  NetGame.cpp  NetGame.h  NetGameForm.cpp  ServerApi.h  ServerSync.h
MatrixGame/src/NetGame/Clients/: CClentTCP.cpp  CClientTCP.h  IClient.h
MatrixGame/src/NetGame/Logic/: CCommandHandler.cpp  CCommandHandler.h  CNetGame.cpp  CNetGame.h  CNetGameForm.cpp  CNetGameForm.h  CNetGameLogic.cpp  CNetGameLogic.h  CNetOrderProcessor.cpp  CNetOrderProcessor.h  CObjectSerializer.cpp  CObjectSerializer.h  INetGameLogic.h  NetGame.cpp  NetGame.h  NetGameForm.cpp  NetGameForm.h
MatrixGame/src/NetGame/Net/: CServerApi.cpp  CServerApi.h  CServerConnection.cpp  CServerConnection.h  CServerSync.cpp  CServerSync.h  IPacketHandler.h  IServerEventHandler.h  NetPacketHandler.h  ServerApi.cpp  ServerApi.h  ServerConnection.cpp  ServerConnection.h  ServerSync.cpp  ServerSync.h
MatrixGame/src/NetGame/Packets/: HelloPacketHandler.cpp  NetPacket.h  NetPacketHandler.cpp
MatrixGame/src/RangersInterface/: RangersCacheDataLoader.cpp  RangersCacheDataLoader.h  RangersGame.cpp  RangersGame.h  RangersInterfaceInternal.cpp  RangersInterfaceInternal.h  RangersInterfaceTextImpl.h  RangersResourcesData.cpp  RangersResourcesData.h  RangersSound.cpp  RangersSound.h  RangersText.h  RangesText.cpp
MatrixGame/src/Visual/: CAlwaysDrawStorage.h  CMacroTexture.h  CMatrixMapVisual.cpp  CMatrixMapVisual.h  CMatrixVisiCalc.cpp  CMatrixVisiCalc.h  CMatrixVisuaLoader.cpp  CMatrixVisualLoader.h  CP2PInterator.h  IMatrixMapVisual.h
MatrixGame/src/Visuall/: CAlwaysDrawStorage.cpp  CMacroTexture.cpp  CMatrixVisiCalc.h
MatrixServer/: CMakeLists.txt
MatrixServer/src/: CServerCore.cpp  CServerCore.h  CServerMainLoop.cpp  CServerMainLoop.h  main.cpp
MatrixServer/src/game/: CCommandLog.cpp  CCommandLog.h  CGameNetwork.cpp  CGameNetwork.h  CGameSide.h  CPlayersStore.cpp  CPlayersStore.h  CServerMatrixGame.cpp  CServerMatrixGame.h  CSidesLogic.cpp  CSidesLogic.h  IGame.h  IGameCommand.h  SMatrixGameSettings.h
MatrixServer/src/game/commands/: CCommandAnonimous.h  CCommandAnonymous.cpp  CCommandAnonymous.h  IGameCommand.h
MatrixServer/src/game/players/: CNetPlayer.cpp  CNetPlayer.h  CPlayerBase.h  IPlayer.h
MatrixServer/src/jobs/: CSessionCleaner.cpp  CSessionCleaner.h  IServerJob.h
MatrixServer/src/net/: CServerPacketHandler.h
MatrixServer/src/net/handlers/: CConnectPacketHandler.cpp  CConnectPacketHandler.h  CGamePacketHandler.cpp  CGamePacketHandler.h  CGamePacketHandlerFactory.cpp  CGamePacketHandlerFactory.h  IPacketHandler.h
MatrixServer/src/net/packets/: CChangeGameStatePacket.cpp  CChangeGameStatePacket.h  CCommandsPacket.cpp  CCommandsPacket.h  CConnectPacket.cpp  CConnectPacket.h  CGameInfoPacket.cpp  CGameInfoPacket.h  CGameTickPacket.cpp  (+2 more)
MatrixShared/: CMakeLists.txt
MatrixShared/shared/: defaults.h
MatrixShared/shared/game/: CCommandFactory.cpp  CCommandFactory.h  CCommandLog.cpp  CCommandLog.h  Comands.h  Game.h  ICommandFactory.h  IGameCommand.h  Player.h
MatrixShared/shared/net/: CBitsream.h  CPacket.h  CReadStream.h  CRequest.h  CWriteStream.h  IPacket.h  IPacketHandler.h  PacketEnums.h  Protocol.h
MatrixShared/src/net/: CBitsream.h  PacketEnums.h
(+112 files in other folders)
